Updated fonts, removed scrollbars, fixed sizes

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 
 body { 
     margin: 0px;
+    font-family: Spectral;
 }
 
 html {
@@ -12,7 +13,7 @@ html {
     position: fixed;
     top: 0;
     background-color: #ffffff00;
-    height: 70px;
+    height: 8%;
     width: 100%;
     transition: 1s;
     margin: 0;
@@ -22,6 +23,7 @@ html {
     justify-content: center;
     align-items: center;
     z-index: 1;
+    font-family: Montserrat;
 }
 
 .header:hover {
@@ -31,7 +33,7 @@ html {
 
 .headerlinks {
     width: 100%;
-    height: 60px;
+    height: 6%;
     display:flex;
     flex-direction: row;
     justify-content: center;
@@ -39,6 +41,7 @@ html {
 }
 
 .container {
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -59,19 +62,17 @@ html {
 }
 
 .headerelement {
-    font-size: 20px;
+    font-size: 1.4rem;
     color: #e6e6e6;
     text-align: center;
-    font-family: Montserrat;
     font-weight: 300;
     margin-left: 3rem;
     text-decoration: none;
 }
 .ebalin-logo {
-    font-size: 40px;
+    font-size: 2.5rem;
     color: #e6e6e6;
     text-align: center;
-    font-family: Montserrat;
     font-weight: 300;
     margin-right: 5rem;
     text-decoration: none;
@@ -85,30 +86,26 @@ iframe {
 }
 
 .video-container {
-    width: 1920px;
-    height: 1080px;
-    top: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+}
+
+video {
+    width: 100%;
+    height: 100%;
+    display: flex;
 }
 
 link {
     width: 1000px;
 }
 
-
-
-#myVideo {
-    width: 1920px;
-    height: 1080px;
-    z-index: -1;
-    padding: 0;
-    margin: 0;
-}
-
 .paragraph_bottom {
     color: #e6e6e6;
     background-color: #111111;
     width: 100%;
-    font-family: Montserrat;
     font-size: 1.5rem;
     margin-left: auto;
     margin-right: auto;
@@ -125,9 +122,10 @@ link {
     margin-bottom: 5rem;
 }
 
-.fullhd-photo {
-    width: 1920px;
-    height: 1080px;
+
+.ebalin-ad {
+    width: 100%;
+    height: 100%;
     margin: 0px;
     padding: 0px;
 }
@@ -141,6 +139,16 @@ link {
     display:flex;
     justify-content: center;
     align-items: center;
-    font-family: Montserrat;
     font-size: 2.5rem;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .example {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
